# blurVideo

./: BlurVideo.cpp  CMakeLists.txt  README.md  settings.ini
